# spechub

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.server.json
.agents/skills/testing-spechub-dashboard/: SKILL.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx  prompts.ts
app/components/: AnnotationPanel.tsx  AnnotationToolbar.tsx  CommentDialog.tsx  ErrorBoundary.tsx
app/components/icons/: index.tsx
app/lib/: api.ts  filters.ts  format.ts  sanitize.ts  storage.ts  types.ts
docs/superpowers/plans/: 2026-06-09-spechub-shell-installer.md
docs/superpowers/specs/: 2026-06-09-spechub-shell-installer-design.md
scripts/: copy-web.mjs
src/: annotations.ts  cli.ts  config.ts  index-service.ts  markdown.ts  opencode.ts  opener.ts  paths.ts  scanner.ts  server.ts  state.ts  types.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  opencode.rs
src/web/: app.js  index.html  styles.css
test/: annotations.test.ts  config.test.ts  desktop-integration.test.ts  index-service.test.ts  installer.test.ts  opener.test.ts  prompt-gallery.test.ts  renderer.test.ts  scanner.test.ts  server.test.ts  state.test.ts  ui-filters.test.ts
