[package]
name = "spechub"
version = "0.1.0"
description = "Desktop dashboard for local specs and implementation plans"
authors = ["SpecHub"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
globset = "0.4"
hex = "0.4"
open = "5"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
